# GNN-Remat

./: .gitignore  README.md  demo.py  diagnose_memory.py  run_tests.py
gnn_remat/: __init__.py  pyproject.toml  setup.py
gnn_remat/benchmark/: models.py  profiler.py  runner.py
gnn_remat/core/: detector.py  dsl.py  heuristic.py  remat_mp.py  replacer.py  transform.py  wrapper.py
gnn_remat/examples/: train_ogbn_arxiv.py
gnn_remat/tests/: test_chunked.py  test_detector.py  test_granularity.py  test_heuristic.py  test_plan.py  test_profiler.py  test_public_api.py  test_transform.py  test_wrapper.py
