[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-remat"
version = "0.3.1"
description = "Aggregation-granular rematerialization for PyTorch Geometric, with SAR-inspired destination-node chunked propagation for large-graph memory efficiency."
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "torch_geometric>=2.3"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
gnn-remat-bench = "gnn_remat.benchmark.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# ── Changelog ──────────────────────────────────────────────────────────────────
# v0.3.1 — chunked-path performance + correctness
#   • Sort-based windowing: edges sorted by destination once (O(E log E)); each
#       window located via searchsorted instead of an O(num_chunks × E) mask.
#   • Local destination remap (GCN/SAGE/GAT): each chunk's scatter output is
#       [chunk_len, F] instead of full [num_dst, F], removing the O(num_dst × F)
#       memory floor. Measured GAT 40K/1M: monotone 4242 MB → 330 MB (~13×), no
#       longer regresses for small chunks. TransformerConv safely falls back.
#   • auto_chunk_size(): per-edge width = num_heads × out_channels + num_heads
#       (was out_channels + num_heads; under-counted concat attention by ~heads×).
#   • Zero-overhead inference: propagate() checks self.training before flattening.
#   • +5 tests (TransformerConv chunk parity, local-remap path selection); 82 pass.
#
# v0.3.0 — SAR-inspired improvements
#   • Destination-node chunked propagation (_propagate_chunked):
#       processes edges in contiguous dst-node windows so only one chunk's
#       edge tensors are live at a time. Reduces peak memory from
#       O(total_edges × F) to O(chunk_edges × F).
#   • Per-edge kwargs slicing (_slice_edge_kwargs):
#       correctly handles PyG >= 2.x layers (GATConv, TransformerConv) that
#       pre-compute per-edge tensors (alpha) before calling propagate().
#   • auto_chunk_size(): computes a GPU-memory-aware chunk_nodes value.
#   • SAR Case-1/Case-2 heuristic: attention layers scored 3.5× higher than
#       non-attention layers in mode="auto", matching SAR's classification.
#   • chunk_nodes parameter threaded through gnn_remat(), DSL decorator,
#       remat.checkpoint.apply(), and remat.layer().
#   • 27 new tests (test_chunked.py); all 74 tests pass.
#
# v0.2.0 — DSL surface
#   • remat.checkpoint class decorator
#   • remat.layer() inline annotation
#   • remat.when_type() / remat.when_name() composable rules
#   • mode="auto" heuristic layer selection
#
# v0.1.0 — initial release
#   • RematMessagePassing: propagate()-level gradient checkpoint
#   • make_remat_conv() factory
#   • gnn_remat() functional API (modes: all, names, types)
#   • _RematConv module-level wrapper (baseline comparison)
